--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/slick-carousel": "^1.6.37",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-rating": "^2.0.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.0",
