--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-rating": "^2.0.5",
+    "react-rating-star-with-type": "^1.2.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.0",
