--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "framer-motion": "^10.16.4",
     "jquery": "^3.7.1",
     "next": "13.5.2",
     "postcss": "8.4.30",
